--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@
       rel="stylesheet"
     />
     <link href="assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet" />
-    <link
-      href="assets/vendor/owl.carousel/assets/owl.carousel.min.css"
-      rel="stylesheet"
-    />
     <link href="assets/vendor/venobox/venobox.css" rel="stylesheet" />
 
 
@@ -111,7 +107,7 @@
     <main id="main">
       <!-- ======= About Section ======= -->
       <section id="about" class="about-mf sect-pt4 route">
-        <div class="container">
+        <div class="container-fluid">
           <div class="row">
             <div class="col-sm-12">
               <div class="title-box text-center">
@@ -142,7 +138,7 @@
               </div>
             </div>
             <div class="col-lg-6 col-sm-12 imgContentStyle animate-right">
-              <div class="imgContent d-flex flex-row">
+              <div class="imgContent d-flex flex-row flex-wrap">
                 <img src="assets/img/javascript.png" alt="" />
                 <img src="assets/img/nodejs.png" alt="" />
                 <img src="assets/img/react.png" alt="" />
@@ -659,10 +655,8 @@
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
     <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
     <script src="assets/vendor/counterup/jquery.counterup.min.js"></script>
-    <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
     <script src="assets/vendor/typed.js/typed.min.js"></script>
     <script src="assets/vendor/venobox/venobox.min.js"></script>
 
