--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     <!-- Card image -->
                     <img
                       class="card-img-top"
-                      src="assets/img/etc/piclava.png"
+                      src="assets/img/etc/PicLava.png"
                       alt="Card image cap"
                     />
 
