--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     <!-- Card image -->
                     <img
                       class="card-img-top"
-                      src="assets/img/etc/netflix-clone.png"
+                      src="assets/img/etc/rsz_netflix-clone.png"
                       alt="Card image cap"
                     />
 
@@ -495,7 +495,7 @@
                     <div class="col-md-6">
                       <div class="title-box-2">
                         <h5 class="title-left">
-                          Send Message Us
+                          Send A Message
                         </h5>
                       </div>
                       <div>
