--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 </div>
                 <div class="face back growthhyperback">
                   <div class="d-flex flex-column flex-wrap"> 
-                    <a href="https://srflix.netlify.app" class="cardButton" target="_blank" style="margin-bottom: 30px;">Demo</a>
+                    <a href="https://netflix-clone-bb922.web.app" class="cardButton" target="_blank" style="margin-bottom: 30px;">Demo</a>
                     <a href="https://github.com/sabbirrifat/NetflixClone" target="_blank" class="cardButton" >Source Code</a>
                   </div>
                   
